--- a/templates/analyses/cases/_list_image.html
+++ b/templates/analyses/cases/_list_image.html
@@ -1,5 +1,5 @@
-<div class="row-fluid">
-    <table class="table table-bordered table-striped responsive">
+<div class="box">
+    <table class="table table-hover responsive">
         <thead>
             <tr>
                 <th>File name</th>
@@ -17,19 +17,17 @@
                         <td>{{ image.owner.username }}</td>
                         <td>{{ image.created_at }}</td>
                         <td>
-                            <div class="btn-group">
-                                <a class="btn tool fancybox" title="Show preview" href="{% url "analyses.views.image" image.image_id %}">
-                                    <i class="icon-picture"> </i>
-                                </a>
-                                <a class="btn tool" title="Show analysis" href="{% url "analyses.views.show_analysis" image.id %}">
-                                    <i class="icon-list-alt"> </i>
-                                </a>
-                                {% if image.favorites.all %}
-                                    <a id="{% url "analyses.views.favorite" image.id %}" title="Favorite" rel="{{ image.id }}" class="btn tool favorite btn-warning star{{image.id}}"> <i class="icon-star"> </i></a>
-                                {% else %}
-                                    <a id="{% url "analyses.views.favorite" image.id %}" title="Favorite" rel="{{ image.id }}" class="btn tool favorite star{{image.id}}"> <i class="icon-star"> </i></a>
-                                {% endif %}
-                            </div>
+                            <a class="btn btn-primary fancybox" data-tooltip="tooltip" title="Show preview" href="{% url "analyses.views.image" image.image_id %}">
+                                <i class="fa fa-photo"> </i>
+                            </a>
+                            <a class="btn btn-info" data-tooltip="tooltip" title="Show analysis" href="{% url "analyses.views.show_analysis" image.id %}">
+                                <i class="fa fa-file-text"> </i>
+                            </a>
+                            {% if image.favorites.all %}
+                                <a id="{% url "analyses.views.favorite" image.id %}" data-tooltip="tooltip" title="Favorite" rel="{{ image.id }}" class="btn favorite btn-warning star{{image.id}}"> <i class="fa fa-star"> </i></a>
+                            {% else %}
+                                <a id="{% url "analyses.views.favorite" image.id %}" data-tooltip="tooltip" title="Favorite" rel="{{ image.id }}" class="btn btn-default favorite star{{image.id}}"> <i class="fa fa-star"> </i></a>
+                            {% endif %}
                         </td>
                     </tr>
                 {% endfor %}
