--- a/templates/analyses/cases/edit.html
+++ b/templates/analyses/cases/edit.html
@@ -1,30 +1,32 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="span11">
-    <div class="content content-large">
-        <div class="content-header">
-            <h2><i class="icon-briefcase"> </i> Cases</h2>
-        </div>
-        <div class="content-breadcrumb">
-            <ul class="breadcrumb">
-                <li>
-                    <a href="/"><i class="icon-home"> </i> Dashboard</a><span class="divider">&rsaquo;</span>
-                </li>
-                <li>
-                    <a href="{% url "analyses.views.list_cases" %}"><i class="icon-briefcase"> </i> Cases</a>
-                    <span class="divider">&rsaquo;</span>
-                </li>
-                <li class="active">
-                    Edit
-                </li>
-            </ul>
-        </div>
-        <div class="content-body">
-            <form action="{% url "analyses.views.edit_case" case.id %}" method="POST">{% csrf_token %}
-                {% include "layout/_form.html" %}
-            </form>
-        </div>
+    <div class="crumbs">
+        <ol class="breadcrumb hidden-xs">
+            <li>
+                <i class="fa fa-home"></i><a href="/">Dashboard</a>
+            </li>
+            <li>
+                <a href="{% url "analyses.views.list_cases" %}"><i class="fa fa-book"> </i> Cases</a>
+            </li>
+            <li class="active">
+                Edit
+            </li>
+        </ol>
     </div>
 </div>
+
+    <div class="content">
+        <div class="page-h1">
+            <h1>Edit case: <small>{{ case.name }}</small></h1>
+        </div>
+        <div class="col-md-3">
+            <div class="wdgt">
+                <form action="{% url "analyses.views.edit_case" case.id %}" method="POST">{% csrf_token %}
+                    {% include "layout/_form.html" %}
+                </form>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
