--- a/templates/analyses/cases/show.html
+++ b/templates/analyses/cases/show.html
@@ -1,41 +1,41 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="span11">
-    <div class="content content-large">
-        <div class="content-header">
-            <h2><i class="icon-briefcase"> </i> Cases:
-                <small>
-                    {% if case.name|length > 70 %}
-                        {{ case.name|slice:":70" }} ...
-                    {% else %}
-                        {{ case.name }}
-                    {% endif %}
-                </small></h2>
-        </div>
-        <div class="content-breadcrumb">
-            <ul class="breadcrumb">
-                <li>
-                    <a href="/"><i class="icon-home"> </i> Dashboard</a><span class="divider">&rsaquo;</span>
-                </li>
-                <li>
-                    <a href="{% url "analyses.views.list_cases" %}"><i class="icon-briefcase"> </i> Cases</a>
-                    <span class="divider">&rsaquo;</span>
-                </li>
-                <li class="active">
-                    {% if case.name|length > 70 %}
-                        {{ case.name|slice:":70" }} ...
-                    {% else %}
-                        {{ case.name }}
-                    {% endif %}
-                </li>
-            </ul>
-        </div>
-        <div class="content-body">
-            {% include "analyses/cases/_tbl_case.html" %}
-        </div>
+    <div class="crumbs">
+        <ol class="breadcrumb hidden-xs">
+            <li>
+                <i class="fa fa-home"></i><a href="/">Home</a>
+            </li>
+            <li>
+                <a href="{% url "analyses.views.list_cases" %}"><i class="fa fa-book"> </i> Cases</a>
+            </li>
+            <li class="active">
+                {% if case.name|length > 70 %}
+                    {{ case.name|slice:":70" }} ...
+                {% else %}
+                    {{ case.name }}
+                {% endif %}
+            </li>
+        </ol>
     </div>
 </div>
+
+    <div class="content">
+        <div class="page-h1">
+            <h1>Case: <small>
+                {% if case.name|length > 70 %}
+                    {{ case.name|slice:":70" }} ...
+                {% else %}
+                    {{ case.name }}
+                {% endif %}
+            </small></h1>
+        </div>
+        <div class="col-md-12">
+            <div class="wdgt">
+                {% include "analyses/cases/_tbl_case.html" %}
+            </div>
+        </div>
+    </div>
 
 {% include "layout/_modalActionCase.html" %}
 
