--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -126,6 +126,21 @@
             </div>
         </div>
     </div>
+        <script type="text/javascript">
+        $(document).ready(function(){
+            $.ajax({
+                url : "{% url 'manage.views.update_check' %}",
+                type : "GET",
+                success : function(data) {
+                    if (data == "False"){
+                        $('#newVersion').css('display', 'none');
+                        //$('#newVersion').show();
+                        //$('#newVersionFooter').show();
+                    }
+                }
+            });
+        });
+    </script>
     <script type="text/javascript">
         $(function () {
             $('#container').highcharts({
